📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4846,5 +4846,93 @@
         "published": "Tue, 09 Dec 2025 20:33:14 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46210240\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/fal-nabs-140m-in-fresh-funding-led-by-sequoia-tripling-valuation-to-4-5b/",
+        "title": "Fal nabs $140M in fresh funding led by Sequoia, tripling valuation to $4.5B",
+        "link": "https://techcrunch.com/2025/12/09/fal-nabs-140m-in-fresh-funding-led-by-sequoia-tripling-valuation-to-4-5b/",
+        "published": "Tue, 09 Dec 2025 22:21:33 +0000",
+        "source": "TechCrunch",
+        "summary": "The round, which was Fal\u2019s third fundraise this year, also included a secondary sale for early investors, sources tell us."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/cashew-research-is-going-after-the-90b-market-research-industry-with-ai/",
+        "title": "Cashew Research is going after the $90B market research industry with AI",
+        "link": "https://techcrunch.com/2025/12/09/cashew-research-is-going-after-the-90b-market-research-industry-with-ai/",
+        "published": "Tue, 09 Dec 2025 22:20:39 +0000",
+        "source": "TechCrunch",
+        "summary": "Cashew Research uses AI to automate the market research process while still collecting real-world data from humans."
+    },
+    {
+        "id": "https://www.theverge.com/column/841161/ai-moratorium-midterm-elections-republicans",
+        "title": "Both sides of the aisle hate the AI moratorium",
+        "link": "https://www.theverge.com/column/841161/ai-moratorium-midterm-elections-republicans",
+        "published": "2025-12-09T18:03:41-05:00",
+        "source": "The Verge",
+        "summary": "Hello and welcome to Regulator. If you're a subscriber, you are stalwart and true, and if you're here from the internet, prove your chivalry and worth by subscribing to The Verge here. (And if you're David Sacks: we said what we said.) As of Tuesday, President Donald Trump has committed to signing some sort of [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841220/mcdonalds-ai-generated-christmas-ad",
+        "title": "Somehow, this AI-generated McDonald&#8217;s ad about hating Christmas was a flop",
+        "link": "https://www.theverge.com/news/841220/mcdonalds-ai-generated-christmas-ad",
+        "published": "2025-12-09T17:52:20-05:00",
+        "source": "The Verge",
+        "summary": "If you're having a stressful holiday season, the answer is McDonald's - at least, that's what a now-removed AI-generated ad suggested, as reported by Futurism. Set to a song calling holiday season \"the most terrible time of the year,\" the ad shows AI-generated people falling victim to a slew of wintery woes, including family dinners, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841219/google-gemini-us-military-ai-platform-genai-mil",
+        "title": "Google is powering a new US military AI platform",
+        "link": "https://www.theverge.com/news/841219/google-gemini-us-military-ai-platform-genai-mil",
+        "published": "2025-12-09T17:43:54-05:00",
+        "source": "The Verge",
+        "summary": "The Department of Defense is announcing its own \"bespoke\" AI platform, GenAI.mil, and Google Cloud's Gemini will be the first AI tool available on it, according to a press release. Secretary of Defense Pete Hegseth (who has dubbed himself Secretary of War, though the name has not been legally changed by Congress) promised that the [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/down-comforter-deals-december-2025/",
+        "title": "The Best Down Comforter Deals for Winter Nights (2025)",
+        "link": "https://www.wired.com/story/down-comforter-deals-december-2025/",
+        "published": "Tue, 09 Dec 2025 22:29:01 +0000",
+        "source": "WIRED",
+        "summary": "We\u2019ve used all of these down comforter picks on our own beds, and they\u2019re excellent for winter (or year-round)."
+    },
+    {
+        "id": "https://gizmodo.com/openai-anthropic-and-others-create-foundation-for-standardizing-ai-agents-2000697488",
+        "title": "OpenAI, Anthropic, and Others Create Foundation for Standardizing AI Agents",
+        "link": "https://gizmodo.com/openai-anthropic-and-others-create-foundation-for-standardizing-ai-agents-2000697488",
+        "published": "Tue, 09 Dec 2025 23:05:59 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"OpenAI logo displayed on a laptop screen and SearchGPT website displayed on a phone screen are seen in this illustration photo\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2024/12/GettyImages-21653483551.jpg\" width=\"1500\" /><br /><br />Microsoft, AWS, and Saleforce are also supporting the initiative."
+    },
+    {
+        "id": "https://gizmodo.com/13-burning-questions-when-stranger-things-5-returns-for-part-2-2000697022",
+        "title": "13 Burning Questions When \u2018Stranger Things 5\u2019 Returns for Part 2",
+        "link": "https://gizmodo.com/13-burning-questions-when-stranger-things-5-returns-for-part-2-2000697022",
+        "published": "Tue, 09 Dec 2025 23:00:45 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Stranger Things Demogorgon Netflix\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Stranger-Things-Demogorgon-Netflix.jpg\" width=\"1920\" /><br /><br />The Duffer Brothers' hit drops more episodes\u2014and hopefully some answers to the below\u2014December 25 on Netflix."
+    },
+    {
+        "id": "https://gizmodo.com/the-odyssey-christopher-nolan-imax-prologue-trailer-2000697600",
+        "title": "\u2018The Odyssey\u2019 Will Drop an Epic Prologue in IMAX Theaters This Weekend",
+        "link": "https://gizmodo.com/the-odyssey-christopher-nolan-imax-prologue-trailer-2000697600",
+        "published": "Tue, 09 Dec 2025 22:30:31 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Matt Damon Odyssey Cropped\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/07/Matt-Damon-Odyssey-cropped.jpg\" width=\"1920\" /><br /><br />Go see 'One Battle After Another' or 'Sinners' in 70mm IMAX, and you'll get an extended peek at Christopher Nolan's 2026 release."
+    },
+    {
+        "id": "https://gizmodo.com/pete-hegseth-chooses-google-gemini-to-lead-the-first-front-in-the-future-of-american-warfare-2000697458",
+        "title": "Pete Hegseth Chooses Google Gemini to Lead the First Front in the \u2018Future of American Warfare\u2019",
+        "link": "https://gizmodo.com/pete-hegseth-chooses-google-gemini-to-lead-the-first-front-in-the-future-of-american-warfare-2000697458",
+        "published": "Tue, 09 Dec 2025 22:30:02 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Google Gemini on a phone.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/06/geminigooglegetty.jpg\" width=\"1920\" /><br /><br />\"We are pushing all of our chips in on artificial intelligence as a fighting force,\" Hegseth said."
+    },
+    {
+        "id": "http://qtandeverything.blogspot.com/2025/12/debugging-qt-webassembly-dwarf.html",
+        "title": "Qt, Linux and everything: Debugging Qt WebAssembly",
+        "link": "http://qtandeverything.blogspot.com/2025/12/debugging-qt-webassembly-dwarf.html",
+        "published": "Tue, 09 Dec 2025 21:19:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46210806\">Comments</a>"
     }
 ]
