📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4934,5 +4934,93 @@
         "published": "Tue, 09 Dec 2025 21:19:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46210806\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/coreweave-ceo-defends-ai-circular-deals-as-working-together/",
+        "title": "Coreweave CEO defends AI circular deals as \u2018working together\u2019",
+        "link": "https://techcrunch.com/2025/12/09/coreweave-ceo-defends-ai-circular-deals-as-working-together/",
+        "published": "Wed, 10 Dec 2025 00:49:25 +0000",
+        "source": "TechCrunch",
+        "summary": "The CEO of the AI data center provider, which has Nvidia as an investor and a supplier, described the environment as a \"violent change\" in demand."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/unconventional-ai-confirms-its-massive-475m-seed-round/",
+        "title": "Unconventional AI confirms its massive  $475M seed round",
+        "link": "https://techcrunch.com/2025/12/09/unconventional-ai-confirms-its-massive-475m-seed-round/",
+        "published": "Wed, 10 Dec 2025 00:24:16 +0000",
+        "source": "TechCrunch",
+        "summary": "Led by Naveen Rao, the former head of AI at Databricks, the new hardware startup is valued at $4.5 billion."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/hinge-ceo-steps-down-to-launch-overtone-an-ai-dating-app/",
+        "title": "Hinge CEO steps down to launch Overtone, an AI dating app",
+        "link": "https://techcrunch.com/2025/12/09/hinge-ceo-steps-down-to-launch-overtone-an-ai-dating-app/",
+        "published": "Wed, 10 Dec 2025 00:01:13 +0000",
+        "source": "TechCrunch",
+        "summary": "Overtone is described as \"an early-stage dating service focused on using AI and voice tools to help people connect in a more thoughtful and personal way.\""
+    },
+    {
+        "id": "https://www.theverge.com/news/841290/activision-call-of-duty-modern-warefare-black-ops-back-to-back",
+        "title": "Call of Duty won\u2019t release Modern Warfare or Black Ops back to back anymore",
+        "link": "https://www.theverge.com/news/841290/activision-call-of-duty-modern-warefare-black-ops-back-to-back",
+        "published": "2025-12-09T19:24:11-05:00",
+        "source": "The Verge",
+        "summary": "Future Call of Duty releases will no longer include back-to-back launches of Modern Warfare or Black Ops games, Activision announced on Tuesday. The past four releases in the series have been Modern Warfare II (2022), Modern Warfare III (2023), Black Ops 6 (2024), and Black Ops 7 (2025), but moving forward, Activision wants to offer [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-best-razor-ive-ever-used-is-on-sale/",
+        "title": "This Is the Best Razor I've Ever Used\u2014Save Big With This Sale",
+        "link": "https://www.wired.com/story/the-best-razor-ive-ever-used-is-on-sale/",
+        "published": "Wed, 10 Dec 2025 00:04:44 +0000",
+        "source": "WIRED",
+        "summary": "Henson Razors are engineered to give a spectacular shave with dirt-cheap generic blades."
+    },
+    {
+        "id": "https://www.wired.com/story/intel-signs-term-sheet-sambanova-ai/",
+        "title": "Intel Takes Major Step in Plan to Acquire Chip Startup SambaNova",
+        "link": "https://www.wired.com/story/intel-signs-term-sheet-sambanova-ai/",
+        "published": "Tue, 09 Dec 2025 23:08:59 +0000",
+        "source": "WIRED",
+        "summary": "The two chip companies have signed a term sheet, according to sources with direct knowledge of the agreement."
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/over-250-people-quarantined-in-south-carolina-as-measles-outbreak-rages/",
+        "title": "Over 250 people quarantined in South Carolina as measles outbreak rages",
+        "link": "https://arstechnica.com/health/2025/12/over-250-people-quarantined-in-south-carolina-as-measles-outbreak-rages/",
+        "published": "Tue, 09 Dec 2025 22:34:39 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "16 cases are linked to a church, which followed exposures at four schools last week."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/repair-iconic-2000s-era-gadgets-in-upcoming-indie-game-restory-233445848.html?src=rss",
+        "title": "Repair iconic 2000s-era gadgets in upcoming indie game ReStory",
+        "link": "https://www.engadget.com/gaming/repair-iconic-2000s-era-gadgets-in-upcoming-indie-game-restory-233445848.html?src=rss",
+        "published": "Tue, 09 Dec 2025 23:34:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div><p>We love a little nostalgia mixed in with our cozy gaming, and <em>ReStory</em> looks like a perfect blend of those two. In this upcoming indie game, you play the owner of a Tokyo electronics repair shop in the mid 2000s. The trailer that dropped today shows you tinkering with some very familiar gadgets from the era, such as renamed riffs on a Tamagotchi, a Nokia brick phone, a PSP and a Walkman. You clean and repair"
+    },
+    {
+        "id": "https://gizmodo.com/your-favorite-social-media-psycho-is-back-in-killer-sequel-influencers-2000690160",
+        "title": "Your Favorite Social Media Psycho Is Back in Killer Sequel \u2018Influencers\u2019",
+        "link": "https://gizmodo.com/your-favorite-social-media-psycho-is-back-in-killer-sequel-influencers-2000690160",
+        "published": "Wed, 10 Dec 2025 00:00:52 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Influencers Topart\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/11/INFLUENCERS-topart.jpg\" width=\"1920\" /><br /><br />Kurtis David Harder\u2019s follow-up to his 2022 horror hit stars Cassandra Naud as a shifty, seductive, tech-savvy villain."
+    },
+    {
+        "id": "https://gizmodo.com/doctors-issue-warning-after-fit-50-year-old-gets-stroke-tied-to-energy-drinks-2000697325",
+        "title": "Doctors Issue Warning After Fit 50-Year-Old Gets Stroke Tied to Energy Drinks",
+        "link": "https://gizmodo.com/doctors-issue-warning-after-fit-50-year-old-gets-stroke-tied-to-energy-drinks-2000697325",
+        "published": "Tue, 09 Dec 2025 23:30:57 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Energydrinkcans\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/energydrinkcans.jpg\" width=\"1920\" /><br /><br />The man was consuming three times the maximum daily dose of caffeine recommended for an adult."
+    },
+    {
+        "id": "https://mashable.com/article/hinge-founder-justin-mcleod-leaving-to-launch-overtone-ai-dating-service",
+        "title": "Hinges founder is leaving Match to launch Overtone, an AI dating service",
+        "link": "https://mashable.com/article/hinge-founder-justin-mcleod-leaving-to-launch-overtone-ai-dating-service",
+        "published": "Tue, 09 Dec 2025 23:14:55 +0000",
+        "source": "Mashable",
+        "summary": "Hinge founder and CEO Justin McLeod is stepping down to launch Overtone, an AI-driven dating service"
     }
 ]
