📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5166,5 +5166,85 @@
         "published": "Wed, 10 Dec 2025 03:15:24 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46213585\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/att-promo-code/",
+        "title": "AT&T Promo Codes and Bundle Deals: Save $50 in December",
+        "link": "https://www.wired.com/story/att-promo-code/",
+        "published": "Wed, 10 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Whether you\u2019re looking to upgrade your internet or get the latest phone, we\u2019ve got you covered with our selection of AT&amp;T coupons and deals."
+    },
+    {
+        "id": "https://www.wired.com/story/hulu-promo-code/",
+        "title": "Hulu Promo Codes & Discounts: 20% Off December",
+        "link": "https://www.wired.com/story/hulu-promo-code/",
+        "published": "Wed, 10 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Students can get a Hulu plan for $1.99 per month. Get more details on this and other great deals below."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/watch-the-day-of-the-devs-game-awards-2025-edition-right-here-at-1pm-et-060000319.html?src=rss",
+        "title": "Watch the Day of the Devs: Game Awards 2025 edition right here at 1PM ET",
+        "link": "https://www.engadget.com/gaming/watch-the-day-of-the-devs-game-awards-2025-edition-right-here-at-1pm-et-060000319.html?src=rss",
+        "published": "Wed, 10 Dec 2025 06:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div><p>The Game Awards 2025 edition of the Day of the Devs digital showcase goes live on Wednesday, December 10 at 1PM ET on <a class=\"link\" href=\"https://www.twitch.tv/thegameawards\" target=\"_blank\">Twitch</a> and <a class=\"link\" href=\"https://www.youtube.com/watch?v=4nCX95t5cWY\" target=\"_blank\">YouTube</a>. That\u2019s more than 30 hours before The Game Awards itself kicks off, which makes perfect sense. It is called <em>Day<"
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-10-2025",
+        "title": "Hurdle hints and answers for December 10, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-10-2025",
+        "published": "Wed, 10 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/real-madrid-man-city-champions-league-2025-live-stream-for-free",
+        "title": "How to watch Real Madrid vs. Man City online for free",
+        "link": "https://mashable.com/article/real-madrid-man-city-champions-league-2025-live-stream-for-free",
+        "published": "Wed, 10 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Champions League for free. Live stream Real Madrid vs. Manchester City in the Champions League for free."
+    },
+    {
+        "id": "https://mashable.com/article/club-brugge-arsenal-champions-league-2025-live-stream-for-free",
+        "title": "How to watch Club Brugge vs. Arsenal online for free",
+        "link": "https://mashable.com/article/club-brugge-arsenal-champions-league-2025-live-stream-for-free",
+        "published": "Wed, 10 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Champions League for free. Live stream Club Brugge vs. Arsenal in the Champions League for free."
+    },
+    {
+        "id": "https://mashable.com/article/villarreal-copenhagen-champions-league-2025-live-stream-for-free",
+        "title": "How to watch Villarreal vs. Copenhagen online for free",
+        "link": "https://mashable.com/article/villarreal-copenhagen-champions-league-2025-live-stream-for-free",
+        "published": "Wed, 10 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Champions League for free. Live stream Villarreal vs. Copenhagen in the Champions League for free."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-10",
+        "title": "Moon phase today: What the moon will look like on December 10",
+        "link": "https://mashable.com/article/moon-phase-today-dec-10",
+        "published": "Wed, 10 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 10, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://dri.es/source-available-is-not-open-source-and-that-is-okay",
+        "title": "'Source available' is not open source (and that's okay)",
+        "link": "https://dri.es/source-available-is-not-open-source-and-that-is-okay",
+        "published": "Wed, 10 Dec 2025 03:33:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46213709\">Comments</a>"
+    },
+    {
+        "id": "https://dependablec.org/",
+        "title": "Dependable C",
+        "link": "https://dependablec.org/",
+        "published": "Wed, 10 Dec 2025 04:29:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46214091\">Comments</a>"
     }
 ]
