📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5246,5 +5246,37 @@
         "published": "Wed, 10 Dec 2025 04:29:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46214091\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/surfshark-coupon/",
+        "title": "Surfshark Promo Codes: 87% Off | December 2025",
+        "link": "https://www.wired.com/story/surfshark-coupon/",
+        "published": "Wed, 10 Dec 2025 06:40:00 +0000",
+        "source": "WIRED",
+        "summary": "Save up to 87% with a Surfshark coupon code, 3 months of VPN free today, and more December 2025 discounts from WIRED."
+    },
+    {
+        "id": "https://www.wired.com/story/nordvpn-coupon/",
+        "title": "NordVPN Coupons and Deals: 77% Off in December 2025",
+        "link": "https://www.wired.com/story/nordvpn-coupon/",
+        "published": "Wed, 10 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Save up to 77% on 2-year plans and get 3 free months with our NordVPN discount codes."
+    },
+    {
+        "id": "https://www.wired.com/story/legalzoom-promo-code/",
+        "title": "LegalZoom Promo Code: Exclusive 10% Off LLC Formations",
+        "link": "https://www.wired.com/story/legalzoom-promo-code/",
+        "published": "Wed, 10 Dec 2025 06:20:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on top services at LegalZoom, like LLC registration, incorporation, estate plans, and more with coupons and deals from WIRED."
+    },
+    {
+        "id": "https://eli.thegreenplace.net/2025/revisiting-lets-build-a-compiler/",
+        "title": "Revisiting \"Let's Build a Compiler\"",
+        "link": "https://eli.thegreenplace.net/2025/revisiting-lets-build-a-compiler/",
+        "published": "Wed, 10 Dec 2025 06:22:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46214693\">Comments</a>"
     }
 ]
