📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5302,5 +5302,29 @@
         "published": "Wed, 10 Dec 2025 08:00:49 GMT",
         "source": "Latest news",
         "summary": "Analysts suggest that agentic browsers create an unacceptable risk for CISOs today, with data exposure now a top security concern - but far from the only one."
+    },
+    {
+        "id": "https://mashable.com/article/playstation-wrap-up-2025-how-to-see",
+        "title": "PlayStation Wrap-Up sums up your 2025 console gaming habits. Heres how to get yours.",
+        "link": "https://mashable.com/article/playstation-wrap-up-2025-how-to-see",
+        "published": "Wed, 10 Dec 2025 08:17:25 +0000",
+        "source": "Mashable",
+        "summary": "Sony has jumped on the end-of-year recap trend, introducing the new PlayStation Wrap-Up. Here's how to see yours."
+    },
+    {
+        "id": "https://www.markround.com/blog/2025/12/09/stop-breaking-tls/",
+        "title": "Stop Breaking TLS",
+        "link": "https://www.markround.com/blog/2025/12/09/stop-breaking-tls/",
+        "published": "Wed, 10 Dec 2025 07:06:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46214950\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/inside-the-playbook-of-companies-winning-with-ai/",
+        "title": "Inside the playbook of companies winning with AI",
+        "link": "https://www.artificialintelligence-news.com/news/inside-the-playbook-of-companies-winning-with-ai/",
+        "published": "Wed, 10 Dec 2025 09:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Many companies are still working out how to use AI in a steady and practical way, but a small group is already pulling ahead. New research from NTT DATA outlines a playbook that shows how these \u201cAI leaders\u201d set themselves apart through strong plans, firm decisions, and a disciplined approach to building and using AI [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/inside-the-playbook-of-companies-winning-with-ai/\">Inside the playbook of companies winning wit"
     }
 ]
